Resolve funky text wrapping issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,7 +27,21 @@
     padding-right: 2px;
 }
 
-.spoiler{
+.spoiler {
     opacity: 0;
     cursor: pointer;
+}
+
+.message {
+    animation: show 600ms 100ms cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
+    opacity: 0;
+    transform: translateX(-900px);
+    transform-origin: left center;
+}
+
+@keyframes show {
+    100% {
+      opacity: 1;
+      transform: none;
+    }
 }
